<resources>
    <string name="app_name">THELP</string>
    <string name="thelp">THELP</string>
    <string name="description">校园众包平台</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="title">THELP</string>
    <string name="username_hint">手机号</string>
    <string name="password_hint">密码</string>
    <string name="username_helper_text">用户名不能超过9个字</string>
    <string name="helper_text">手机号应为11位</string>
    <string name="password_helper_text">密码不超过20位</string>
    <string name="name_too_long">用户名过长</string>
    <string name="name_required">未输入用户名</string>
    <string name="edit_succeed">修改成功</string>
    <string name="url">http://49.232.201.185:5000</string>
    <string name="home">主页</string>
    <string name="center">个人中心</string>
    <string name="pm">私信</string>
    <string name="order">历史订单</string>
    <string name="search_hint">输入关键字或\'all\'</string>
    <string name="app_label">推荐搜索</string>
    <string name="search_title">搜索</string>
    <string name="description_placeholder">这里是背景简介</string>
    <string name="title_placeholder">订单标题</string>
    <string name="type_placeholder">订单类型</string>
    <string name="detail_placeholder">这里是订单详情这里是订单详情</string>
    <string name="view_button_text">查看详情</string>
    <string name="publish_placeholder">发布人</string>
    <string name="time_placeholder">某年某月某日</string>
    <string name="add_text">创建新订单</string>
    <string name="edit_text">修改订单</string>
    <string name="title_hint">输入订单名称，尽量简洁易懂</string>
    <string name="titel_label">订单标题</string>
    <string name="title_label">订单名称</string>
    <string name="detail_label">详细描述</string>
    <string name="target_location">目的地</string>
    <string name="detail_hint">输入订单详情，尽量不遗漏细节</string>
    <string name="type_label">订单类型</string>
    <string name="type_hint">请从下拉菜单中选择一种订单类型</string>
    <string name="reward_label">赏金</string>
    <string name="reward_hint">0</string>
    <string name="start_time_label">开始时间</string>
    <string name="start_time_hint">2020.7.11 17:59</string>
    <string name="button_revise_time_text">修改</string>
    <string name="end_time_label">结束时间</string>
    <string name="default_no_limit_time">默认无时间限制</string>
    <string name="default_no_limit_type">默认无类型限制</string>
    <string name="search_reward_hint">赏金下限</string>
    <string name="search_start_time_hint">晚于此时间开始</string>
    <string name="search_end_time_hint">早于此时间结束</string>
    <string name="submit">提交</string>
    <string name="title_required">请输入订单标题</string>
    <string name="title_too_long">标题过长</string>
    <string name="target_required">请输入目的地</string>
    <string name="detail_required">请输入订单详情</string>
    <string name="type_required">请选择订单类型</string>
    <string name="type_too_long">订单类型过长</string>
    <string name="reward_required">请选择订单赏金</string>
    <string name="start_required">请选择开始时间</string>
    <string name="end_required">请选择结束时间</string>
    <string name="accept_order_button_text">接单</string>
    <string name="finish_order_button_text">完成</string>
    <string name="share_location_button_text">分享定位</string>
    <string name="stop_share_location_button_text">结束定位</string>
    <string name="not_share_location_text">未开启分享定位</string>
    <string name="share_location_text">已开启分享定位</string>
    <string name="abort_order_button_text">中止</string>
    <string name="cancel_order_button_text">取消</string>
    <string name="edit_order_button_text">修改</string>
    <string name="assess_order_button_text">评价</string>
    <string name="assess">订单完成！给您的接单人打个分吧！</string>
    <string name="message">消息</string>
    <string name="message_read">已读消息</string>
    <string name="message_unread">未读消息</string>
    <string name="appeal">申诉</string>
    <string name="modify_hint">请输入修改后的内容</string>
    <string name="modify_password_old_hint">请输入原密码</string>
    <string name="modify_password_new_hint">请输入新密码</string>
    <string name="default_time">00:00</string>
    <string name="order_active_text">新建订单</string>
    <string name="order_accepted_text">已接单</string>
    <string name="order_finished_text">订单已完成</string>
    <string name="order_assessed_text">订单已评价</string>
    <string name="order_canceled_text">订单已取消</string>
    <string name="order_active">active</string>
    <string name="order_accepted">accepted</string>
    <string name="order_finished">finished</string>
    <string name="order_assessed">assessed</string>
    <string name="order_canceled">canceled</string>
    <string name="upload_succeed">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="send_image_succeed">图片发送成功</string>
    <string name="send_image_failed">图片发送失败</string>
    <string name="assess_l1">非常不满意</string>
    <string name="assess_l2">不满意</string>
    <string name="assess_l3">一般</string>
    <string name="assess_l4">满意</string>
    <string name="assess_l5">非常满意</string>
    <string name="no_search_order">没有符合条件的订单</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_title">tabTitleAdapter</string>
    <string name="detail_long_placeholder">病情分析：       左下方胸部是不是胃的部位？有一点疼痛，不排除是胃的症状，可能平常饮食不注意，有胃炎的情况存在       指导意见：       笑得很厉害的时候有胸闷的情况问题不大，如果胸闷经常发生，而且伴随其他不适，需要完善肺功能等检查，排除是哮喘或者是支气管的症状</string>

</resources>
