<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham"
            android:text="@string/title"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:fontFamily="@font/calibri"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="15sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="16sp"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_phone_white_24dp"
                android:hint="@string/username_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_lock_white_24dp"
                app:endIconMode="password_toggle"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>