<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".PersonActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorBackground"
            android:src="@drawable/ic_arrow_back_24px_black"
            android:contentDescription="TODO" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <cn.carbs.android.avatarimageview.library.AvatarImageView
                    android:id="@+id/avatar"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/salad"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="温斯顿"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryVariant"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="为荣耀而生，为荣耀而死！"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorGrey"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="评分3.5"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryVariant"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorBackground"
                            android:src="@drawable/ic_textsms_24px_black"
                            android:contentDescription="TODO" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorLightGrey"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="#FF0000"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/assess"
                android:textColor="@color/colorOnPrimary"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/assess_star"
                style="?attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:numStars="5"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/assess_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="非常满意"
                android:textColor="@color/colorGrey"
                android:textSize="18sp" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/submit"
                android:textSize="18sp" />

            <Button
                android:id="@+id/appeal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:backgroundTint="@color/materialize_primary"
                android:text="@string/appeal"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>